# ontEAUlogy

./: .gitignore  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs-deploy.yml
data/competency_questions/: competency_questions.md  coverage_matrix.md
data/competency_questions/sparql/: cq01_all_nodes.rq  cq02_flow_connections.rq  cq02_flow_connections_port_based.rq  cq03_input_sources.rq  cq04_downstream_nodes.rq  cq05_flow_path.rq  cq18_model_inputs.rq  cq19_model_outputs.rq  cq20_decision_variables.rq
data/ontology/: catalog-v001.xml  onteaulogy.ttl  onteaulogy_v0.ttl  waterframe.ttl
data/ontology/instances/: household_case1.ttl  household_case1_port_based.ttl
data/ontology/original/: decentralized_household_20251216.ttl
docs/: entities.md  index.md
docs/javascripts/: extra.js
docs/modules/core/: material_entities.md  properties.md
docs/stylesheets/: extra.css
notebooks/: README.md  explore_ontology.py
notebooks/__marimo__/session/: explore_ontology.py.json
research/notes/: ontology_design_patterns_catalogue.md  ontology_resolution_tracking.csv
research/ontologies/QUDT/: competency_questions.md  test_data_flow_balance.ttl  test_qudt_conversions.py  (+1 more)
scripts/: generate_docs.py  validate_coverage.py
scripts/hooks/: generate_docs_hook.py
src/: helpers.py  onteaulogy.py
tests/: __init__.py  test_anchor_generation.py  test_entity_extraction.py  test_link_validation.py  test_namespace_detection.py  test_ontology_consistency.py  test_port_based_model.py
tests/fixtures/: minimal_ontology.ttl  namespace_edge_cases.ttl
(+178 files in other folders)
